<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_gravity="start"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:gravity="center_vertical" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/colorBlack"
                android:tint="?attr/colorAccent"
                android:gravity="start|center_vertical"
                android:src="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/about"
                android:gravity="start|center_vertical"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:gravity="center" >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="start" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="start">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textSize="20sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textIsSelectable="true"
                    android:textSize="13sp" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textIsSelectable="true"
            android:layout_margin="10dp"
            android:textSize="13sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:text="@string/credits"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/credits_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp" >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/change_log"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/change_log_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp" >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/change_logs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:gravity="start"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBlack"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp" />
</RelativeLayout>